demo-sc-twotier/routes-bigip/service-shard-b.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: router-internal-shard-b
  namespace: openshift-ingress
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    ingresscontroller.operator.openshift.io/deployment-ingresscontroller: shard-b
  sessionAffinity: None
  type: ClusterIP
