demo-sc-twotier/routes-bigip/route-shard-a.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5nr: "true"
    f5type: sharded
  name: shard-a
  namespace: openshift-ingress
  annotations:
    virtual-server.f5.com/health: |
      [
        {
          "send": "GET / HTTP/1.0\r\nHost: www.sharded.com\r\n\r\n",
          "recv": "^HTTP/1.0 200",
          "interval": 5,
          "timeout":  16,
          "type": "https",
          "sslProfile": "/Common/serverssl"
        }
      ]
spec:
  host: www.sharded.com 
  path: /
  port:
    targetPort: 443
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: router-internal-shard-a
    weight: 100
  wildcardPolicy: None
