demo-sc-twotier/routes-bigip/route-shard-b.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5nr: "true"
    f5type: sharded
  name: shard-b
  namespace: openshift-ingress
spec:
  host: www.sharded.com 
  path: /shop
  port:
    targetPort: 443
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: router-internal-shard-b
    weight: 100
  wildcardPolicy: None
