demo-sc-twotier/routes-bigip/route-shard-c.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5nr: "true"
    f5type: sharded
  name: shard-c
  namespace: openshift-ingress
spec:
  host: www.sharded.com 
  path: /checkout
  port:
    targetPort: 443
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: router-internal-shard-c
    weight: 100
  wildcardPolicy: None
